fixed styles covers

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -1,66 +1,7 @@
-body {
-  margin: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-.covers-container {
+.covers-section {
+  width: 100%;
   position: relative;
   overflow: hidden;
-  min-height: 508px;
-}
-.marquee {
-  position: absolute;
-  right: -800px;
-  left: 0;
-  overflow: hidden;
-}
-
-.marquee__inner {
-  /* height: 100vh; */
-  height: 30vh;
-  display: flex;
-  transform: rotate(17deg);
-  /* margin-bottom: 10px; */
-  margin-top: 10px;
-}
-
-.marquee__line {
-  /* background-color: #ff7f08; */
-  /* background-color: rgba(0, 0, 0, 0); */
-  background-color: transparent;
-  flex-shrink: 0;
-  margin-right: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* width: calc(100% / 10); */
-  max-height: 162px;
-  /* height: 162px; */
-  /* min-width: 282px; */
-  white-space: nowrap;
-  animation-name: marqueeLine;
-  animation-duration: 5s;
-  animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-}
-
-@keyframes marqueeLine {
-  from {
-    transform: translateX(-20%);
-  }
-
-  to {
-    transform: translateX(-180%);
-  }
-}
-
-.covers-section {
-  display: block;
   min-height: 508px;
   background-image: url(/img/covers/mob/bg-mob.png);
   background-size: cover;
@@ -76,6 +17,46 @@ body {
   }
 }
 
+.covers-container {
+  position: absolute;
+  right: -800px;
+  left: 0;
+  overflow: hidden;
+}
+
+.marquee__inner {
+  position: relative;
+  display: flex;
+  transform: rotate(17deg);
+  margin-bottom: 20px;
+}
+
+.marquee__line {
+  /* background-color: transparent; */
+  flex-shrink: 0;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* height: 162px; */
+  /* width: 282px; */
+  white-space: nowrap;
+  animation-name: marqueeLine;
+  animation-duration: 5s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  object-fit: cover;
+}
+
+@keyframes marqueeLine {
+  from {
+    transform: translateX(-20%);
+  }
+
+  to {
+    transform: translateX(-180%);
+  }
+}
 @media screen and (min-width: 320px) and (max-width: 375px) {
   .covers-section {
     width: 100%;
@@ -97,18 +78,18 @@ body {
     }
   }
 
-  .covers-container {
-    min-height: 960px;
-  }
-
   .marquee__inner {
-    /* margin-bottom: 46px; */
-    margin-top: 46px;
+    margin-bottom: 38px;
   }
 
   .marquee__line {
-    max-height: 314px;
-    margin-right: 78px;
+    height: 314px;
+    margin-right: 38px;
+  }
+
+  .covers-small-img {
+    width: 544px;
+    height: 314 px;
   }
 }
 
@@ -125,8 +106,17 @@ body {
       background-image: url(/img/covers/desk/covers-bg-desk@2x.png);
     }
   }
-  .covers-container {
-    min-height: 960px;
+  .marquee__inner {
+    margin-bottom: 42px;
+  }
+
+  .marquee__line {
+    height: 314px;
+    margin-right: 42px;
+  }
+  .covers-small-img {
+    width: 544px;
+    height: 314 px;
   }
 }
 
